--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.aman.udacityportfolio">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,13 +12,25 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MenuActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".MoviesActivity" />
+
+        <service
+            android:name=".service.MovieIntentService"
+            android:exported="false" />
+
+        <activity
+            android:name=".MovieDetailsActivity"
+            android:label="@string/title_activity_movie_details">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.aman.udacityportfolio.MoviesActivity" />
         </activity>
     </application>
 
